# libsg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  todo.org  vcpkg.json
.github/workflows/: linux.yml  macos.yml  msys2.yml  windows.yml
cmake/: DefaultCMakePreamble.cmake  DefaultPostamble.cmake  DefaultPreamble.cmake  FindSSE.cmake  SetupTarget.cmake  setup_all_targets.cmake  setup_target_options.cmake
common/: CMakeLists.txt
common/include/sg/: accurate_sleeper.h  asio_io_pool.h  background_timer.h  bounds.h  buffer.h  bytes.h  callback.h  circular_contiguous_buffer.h  compression_zstd.h  concepts.h  cpu.h  crc.h  debug.h  enumeration.h  environment.h  error.h  exceptions.h  export.h  extern_c.h  file.h  file_writer.h  file_writer_uv.h  format.h  gettimeofday.h  hardware.h  iterator.h  jthread.h  libuv_wrapper.h  locale.h  map.h  math.h  memory.h  net.h  notifiable_background_worker.h  pimpl.h  process.h  progress.h  random.h  ranges.h  rolling_contiguous_buffer.h  (+15 more)
common/include/sg/data/: channel.h  channel_compressed.h  channel_rolling.h  channel_vector.h  view.h
common/include/sg/internal/: enumeration.h  propagate_const.h
common/src/: accurate_sleeper.cpp  asio_io_pool.cpp  background_timer.cpp  bytes.cpp  compression_zstd.cpp  cpu.cpp  crc.cpp  crc32c_hardware_32bit.cpp  crc32c_hardware_amd.cpp  crc32c_hardware_intel.cpp  environment.cpp  error.cpp  file.cpp  file_writer.cpp  file_writer_uv.cpp  gettimeofday.cpp  hardware.cpp  libuv_wrapper.cpp  locale.cpp  memory.cpp  net.cpp  notifiable_background_worker.cpp  process.cpp  progress.cpp  string.cpp  tcp_client.cpp  tcp_client_sync.cpp  tcp_context.cpp  tcp_listener.cpp  tcp_native.cpp  tcp_server.cpp  tcp_session.cpp  uuid.cpp  version.cpp  worker.cpp
common/src/include/: crc32_hardware_armv7.h  crc32c_defs.h  crc32c_hardware_32bit.h  crc32c_hardware_amd.h  crc32c_hardware_armv7.h  crc32c_hardware_armv8.h  crc32c_hardware_intel.h  crc32c_tabular.h  internal_crc32c.h
imgui/: CMakeLists.txt
imgui/include/sg/imgui/: ConfigFlags.h  config.h  dialog_box.h  imgui_wrapper.h  imgui_wrapper_interface.h  imgui_wrapper_sdl2_opengl3.h  imgui_wrapper_win32_directx12.h  imgui_wrappers.h  utils.h
imgui/src/: dialog_box.cpp  imgui_wrapper.cpp  imgui_wrapper_sdl2_opengl3.cpp  imgui_wrapper_win32_directx12.cpp  utils.cpp
include/sg/: accurate_sleeper.h  background_task.h  background_timer.h  buffer.h  bytes.h  compression_zstd.h  cpu.h  crc.h  crc32.h  debug.h  file_writer.h  gettimeofday.h  libuv_wrapper.h  map.h  memory.h  net.h  pimpl.h  progress.h  progress_indicator.h  tcp_client.h  tcp_listener.h  vector.h  version.h  weak_function.h
include/sg/data/: channel.h  channel_compressed.h  compressed_source.h  data_attribute.h  data_source.h  data_view.h  view.h
include/sg/internal/: propagate_const.h
include/sg/just_in_case/: dynamic_cast_std_function.h
include/udaq/common/: accurate_sleeper.h  background_task.h  background_timer.h  background_worker.h  bounds.h  bytes.h  debug.h  file_writer.h  map.h  memory.h  pimpl.h  progress_indicator.h  vector.h
net/: CMakeLists.txt
net/include/sg/: asio_io_pool.h  net.h  tcp_client.h  tcp_client_sync.h  tcp_native.h  tcp_server.h  tcp_session.h
net/include/sg/net/: asio_io_pool.h  libuv_wrapper.h  net.h  tcp_client.h  tcp_client_sync.h  tcp_native.h  tcp_server.h  tcp_session.h
net/src/: asio_io_pool.cpp  libuv_wrapper.cpp  net.cpp  net_uv.cpp  tcp_client.cpp  tcp_client_sync.cpp  tcp_native.cpp  tcp_server.cpp  tcp_session.cpp
src/: accurate_sleeper.cpp  background_task.cpp  background_timer.cpp  background_worker.cpp  bytes.cpp  compression_zstd.cpp  cpu.cpp  crc.cpp  crc32.cpp  crc32c_hardware_intel.cpp  crc32c_tabular.cpp  debug.cpp  file_writer.cpp  gettimeofday.cpp  libuv_wrapper.cpp  progress.cpp  progress_indicator.cpp  tcp_client.cpp  tcp_listener.cpp  vector.cpp  version.cpp
src/include/: internal_crc32c.h
test/: CMakeLists.txt  tsan.supp
test/src/: asio_io_pool.cpp  basic_test.cpp  bounds.cpp  bytes.cpp  callback.cpp  compression_zstd.cpp  cpu.cpp  crc.cpp  debug.cpp  enumeration.cpp  environment.cpp  exceptions.cpp  file.cpp  file_writer.cpp  file_writer_uv.cpp  format.cpp  gettimeofday.cpp  hardware.cpp  libuv_wrapper.cpp  locale.cpp  net.cpp  notifiable_background_worker.cpp  process.cpp  raanges.cpp  ranges.cpp  rolling_contiguous_buffer.cpp  state_machine.cpp  string.cpp  tcp_client.cpp  tcp_client_sync.cpp  tcp_context.cpp  tcp_listener.cpp  tcp_server.cpp  time.cpp  uuid.cpp  vector.cpp  version.cpp  worker.cpp
test/src/data/: channel_compressed.cpp  channel_rolling.cpp  channel_vector.cpp
